--- a/src/main/resources/templates/_03_css_js.html
+++ b/src/main/resources/templates/_03_css_js.html
@@ -23,6 +23,7 @@
 <h1 th:text="'Thymeleaf Html'"  th:class="'text-center text-primary'"  ></h1>
 <h1 th:text="${key}"  th:class="'text-center text-primary'"  ></h1>
 <p>Lorem ipsum dolor sit amet.</p>
+<span th:text="#{adi}"  ></span>
 
 <!-- ends codes -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
