--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,8 +11,10 @@
 
 </head>
 
-<body>
+<body class="container">
     <!-- start codes -->
+    <h1 class="text-primary">Ana Sayfa</h1>
+    <a href="templates/thymeleaf5" class="btn btn-danger" target="_blank">Object List</a>
 
 
     <!-- ends codes -->
