--- a/src/main/resources/templates/success2.html
+++ b/src/main/resources/templates/success2.html
@@ -13,9 +13,8 @@
 
 <body class="container">
     <!-- start codes -->
-    <h1 class="text-primary">Ana Sayfa</h1>
-    <a href="templates/thymeleaf5" class="btn btn-danger" target="_blank">Object List</a>
-    <a href="/mvc/data" class="btn btn-primary" target="_blank">Login</a>
+    <h1 class="text-primary">Spring Mvc Spring Data Kayıt Başarılı</h1>
+    <a href="validation" class="btn btn-danger" target="_blank">register go</a>
 
 
     <!-- ends codes -->
