--- a/src/main/resources/templates/private.html
+++ b/src/main/resources/templates/private.html
@@ -8,19 +8,14 @@
 
     <!-- Bootstrap CSS v5.0.2 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
-
 </head>
 
 <body class="container">
     <!-- start codes -->
-    <h1 class="text-success">Success Sayfası</h1>
-    <h1 class="text-primary">Kayıt Başarılı</h1>
-    <a href="validation" class="btn btn-danger" target="_blank">register go</a>
-
+    <h1 class="text-danger">Private Sayfası</h1>
 
     <!-- ends codes -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
 </body>
-
 </html>
