--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,7 +15,8 @@
 <!-- start codes -->
 <h1 class="text-primary">Register</h1>
 
-<h5 th:text="${key_register}" class="text-center"></h5>
+<h5 th:text="${key_register}" class="text-center text-danger"></h5>
+
 <form  th:name="register"  class="container" action="/register" method="post" >
     <input   type="hidden"  th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
     <input  type="text"     th:name="username"    class="form-control mb-5"  />
